# Hotspot

./: .gitignore  .readthedocs.yml  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
R/: RcppExports.R  hotspot.R  zzz.R
docs/: .buildinfo  CD4_Tutorial.html  Lineage_Tutorial.html  Makefile  Spatial_Tutorial.html  genindex.html  hotspot.html  index.html  objects.inv  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/hotspot/: hotspot.html
docs/_sources/: index.rst.txt
docs/source/: CD4_Tutorial.ipynb  Lineage_Tutorial.ipynb  Spatial_Tutorial.ipynb  conf.py  hotspot.rst  index.rst
docs/source/_static/: my-styles.css
docs_sphinx/source/: conf.py  hotspot.rst  index.rst
hotspot/: __init__.py  bernoulli_model.py  danb_model.py  gpu.py  hotspot.py  knn.py  local_stats.py  local_stats_pairs.py  modules.py  plots.py  sim_data.py  utils.py
man/: Hotspot.Rd  computeHotspot.Rd  computeWeights.Rd  neighborsAndWeights.Rd
src/: RcppExports.cpp  significance.cpp
src_python/hotspot/: __init__.py  significance.py
tests/: conftest.py  test_bernoulli.py  test_gpu.py  test_hs.R  test_hs.py  test_local_stats.py  test_local_stats_pairs.py  test_validations.py  testthat.R
tests/data/: expression.txt  generate_test_data.py  neighbors.txt  pca.txt  weights.txt
tests/testthat/: test_hs.R  test_neighbors.R
