

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*", "hotspot/__init__.py"]

[tool.poetry]
authors = ["David DeTomaso <David.DeTomaso@berkeley.edu>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
description = "Identifying informative genes (and gene modules) in a single-cell dataset."
documentation = "https://hotspot.readthedocs.io/"
homepage = "https://github.com/yoseflab/hostpost"
license = "MIT"
name = "hotspotsc"
packages = [
  {include = "hotspot"},
]
readme = "README.md"
version = "1.1.3"

[tool.poetry.dependencies]
pytest = {version = ">=5.0", optional = true}
matplotlib = ">=3.0.0"
numba = ">=0.43.1"
numpy = ">=1.16.4"
seaborn = ">=0.9.0"
scipy = ">=1.2.1"
pandas = ">=0.24.0"
tqdm = ">=4.32.2"
statsmodels = ">=0.9.0"
scikit-learn = ">=0.21.2"
importlib-metadata = {version = ">1.0", python = "<3.8"}
python = ">=3.7,<4.0"
pynndescent = ">=0.5"
anndata = ">=0.7"
sphinx-book-theme = {version= ">=0.2.0", optional = true}
myst-nb = {version = "*", optional = true}
sphinx = {version = ">=4.1", optional = true}
ipython = {version = "*", optional = true}
scanpy = {version = "*", optional = true}


[tool.poetry.extras]
test = ["pytest", "scanpy"]
docs=["sphinx-book-theme", "myst-nb", "sphinx", "ipython"]

[tool.poetry.dev-dependencies]


[build-system]
build-backend = "poetry.masonry.api"
requires = [
  "poetry>=1.0",
  "setuptools", # keep it here or "pip install -e" would fail
]
